Add sample projects

--- a/index.html
+++ b/index.html
@@ -10,8 +10,62 @@
 
     <img src="assets/Sleeve Roll.jpg">
 
-    <section id="bio">My name is Dan. I began learning the drums at 12 years old. Since then it has turned into a passion/obsession. I studied at Derby Yamaha Music School and achieved a distinction at grade 8 when I was 16. I then began playing in local cover bands around the Derbyshire area whilst studying Music Technology at Derby College. I achieved a triple distinction for my work on this course as well as obtaining a role at Derby Yamaha Music School as a drum teacher. At 18 I went on to study Music Technology and Production at the University of Derby, graduating with a 2:1. Since completing my degree I have performed all over the country with various bands and productions.
-        I am now also accredited by the Derby & Derbyshire Music Partnership.</section>
+    <section id="bio">
+        <h2>Bio</h2>
+        My name is Dan. I began learning the drums at 12 years old. Since then it has turned into a passion/obsession. I studied at Derby Yamaha Music School and achieved a distinction at grade 8 when I was 16. I then began playing in local cover bands around the Derbyshire area whilst studying Music Technology at Derby College. I achieved a triple distinction for my work on this course as well as obtaining a role at Derby Yamaha Music School as a drum teacher. At 18 I went on to study Music Technology and Production at the University of Derby, graduating with a 2:1. Since completing my degree I have performed all over the country with various bands and productions.
+        I am now also accredited by the Derby & Derbyshire Music Partnership.
+    </section>
 
 
+    <section id="projects">
+        <h2>Projects</h2>
+
+        <h3>Project 1</h3>
+        <img src="">
+        <article>Some text about project 1</article>
+
+        <h4>Technology used:</h4>
+        <ul>
+            <li>HTML</li>
+            <li>Javascript</li>
+            <li>CSS</li>
+            <li>GIT</li>
+        </ul>
+
+        <h3>Project 2</h3>
+        <img src="">
+        <article>Some text about project 2</article>
+
+        <h4>Technology used:</h4>
+        <ul>
+            <li>HTML</li>
+            <li>Javascript</li>
+            <li>CSS</li>
+            <li>GIT</li>
+        </ul>
+
+        <h3>Project 3</h3>
+        <img src="">
+        <article>Some text about project 3</article>
+
+        <h4>Technology used:</h4>
+        <ul>
+            <li>HTML</li>
+            <li>Javascript</li>
+            <li>CSS</li>
+            <li>GIT</li>
+        </ul>
+
+        <h3>Project 4</h3>
+        <img src="">
+        <article>Some text about project 4</article>
+
+        <h4>Technology used:</h4>
+        <ul>
+            <li>HTML</li>
+            <li>Javascript</li>
+            <li>CSS</li>
+            <li>GIT</li>
+        </ul>
+    </section>
 </body>
