--- a/index.html
+++ b/index.html
@@ -68,4 +68,30 @@
             <li>GIT</li>
         </ul>
     </section>
+
+    <section>
+        <h2>Contact</h2>
+
+        
+            <ul>
+                <li>Email: djordandrums@gmail.com</li>
+                <li>Phone: 07557984135</li>
+                <li>Address: Flat 505 Ensign House,<br>
+                    6 Fresh Wharf Road,<br>
+                    Barking,<br>
+                    London,<br>
+                    IG11 7UZ
+                </li>
+            </ul>
+            <form>
+                <label>Email:</label>
+                <input type="email" id="email">
+                <label>Your name:</label>
+                <input type="text" id="name">
+                <label>Your message:</label>
+                <input type="text" id="message">
+                <input type="submit">
+
+            </form>
+    </section>
 </body>
