add title to form in contact section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 </li>
             </ul>
             <form>
+                <h3>Send me a message!</h3>
                 <label>Email:</label>
                 <input type="email" id="email">
                 <label>Your name:</label>
