create and add swirl image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <img src="assets/Swirl.png" id="swirl">
     <h1>Daniel Jordan Web Developer</h1>
 
     <img src="assets/Sleeve Roll.jpg" id="sleeveRoll">
